added some styles to the simple main page

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /CrimeHotSpotWeb/packages/AngularJS.Core.1.7.5/AngularJS.Core.1.7.5.nupkg
 /CrimeHotSpotWeb/packages/AngularJS.Core.1.7.5/.signature.p7s
 /CrimeHotSpotWeb/CrimeHotSpotWeb.sln
+/server.js
