--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
     "description": "NodePlusAngularJS",
     "main": "hello-from-nodejs-server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified! Configure in package.json\" && exit 1",
+        "start": "webpack app.js --mode development --watch",
+        "test": "jest",
         "postinstall": "bower install"
     },
+    "dependencies": {
+        "angular-route": "^1.7.5",
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4",
+        "gulp": "^4.0.0",
+        "jsonwebtoken": "^5.0.2",
+        "method-override": "~2.1.2",
+        "mongodb": "^3.1.13",
+        "mongoose": "~4.1.0",
+        "morgan": "^1.9.1",
+        "readline": "^1.3.0"
     "repository": "",
     "keywords": [
         "node.js",
@@ -18,5 +30,9 @@
     "readmeFilename": "README.md",
     "dependencies": {
         "serve-static": "~1.7.0"
-    }
+    },
+        "devDependencies": {
+            "jest": "^24.1.0",
+            "puppeteer": "^1.12.2"
+        }
 }
