--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "jsonwebtoken": "^5.0.2",
-    "method-override": "~2.1.2",
+    "method-override": "^2.1.3",
     "mongodb": "^3.1.13",
     "mongoose": "~4.1.0",
     "morgan": "^1.9.1",
