--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "bower install"
   },
   "dependencies": {
-    "angular-route": "^1.7.5",
+    "@uirouter/angularjs": "^1.0.22",
+    "angular-route": "^1.7.7",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
