--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "angular": "^1.7.7",
+    "angular-chartist.js": "^5.0.0-beta.2",
     "angular-route": "^1.7.5",
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
+    "chartist": "^0.11.0",
     "ecma": "^1.0.2",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
