--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "angular": "^1.7.7",
-    "angular-chartist.js": "^5.0.0-beta.2",
+    "angular-chart.js": "^1.1.1",
     "angular-route": "^1.7.5",
     "babel": "^6.23.0",
     "body-parser": "^1.18.3",
