--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
     "serve-static": "~1.7.0"
   },
   "devDependencies": {
-    "jest": "^24.1.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-typescript": "^7.3.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^24.5.0",
     "puppeteer": "^1.12.2"
   },
   "keywords": [
